Setup Dagger Hilt and prepared the Settings Screen. Add the options for the settings screen are prepared. The settings are saved using datastore as int and received as SessionDurationOption or SessionNumberOption. Also added a airplane mode listener which will listens for the current airplane mode and show the user if It's active or not. SettingsModule will provide singleton instances SettingsPreferences and ServiceDataRetriever to the viewmodel.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
   <string name="app_name">TimeManagementApp</string>
+
+  <string name="settings_title">Settings</string>
+  <string name="session_settings_title">Session</string>
+  <string name="session_focus_duration">Focus Duration</string>
+  <string name="session_break_duration">Break Duration</string>
+  <string name="session_count">Session Count</string>
+  <string name="session_notification_title">Notification</string>
+  <string name="airplane_mode_title">AirPlane Mode</string>
+  <string name="airplane_mode_text">Views Current Airplane Mode</string>
+
 </resources>
