--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
   <string name="app_name">TimeManagementApp</string>
 
-  <string name="settings_title">Settings</string>
   <string name="session_settings_title">Session</string>
   <string name="session_focus_title">Focus Duration</string>
   <string name="session_focus_text">Minutes to focus</string>
@@ -18,5 +17,15 @@
   <string name="channel_desc">A channel to show the current onh=going session</string>
   <string name="notification_action_pause">Pause</string>
   <string name="notification_action_stop">Stop</string>
-  <string name="notification_action_start">Start</string>
+  <string name="notification_action_resume">Resume</string>
+
+  <string name="icon_pause">Pause Icon</string>
+  <string name="icon_play">Play Icon</string>
+  <!--Navigation-->
+  <string name="navigation_route_statistics">Statistics</string>
+  <string name="navigation_route_timer">Timer</string>
+  <string name="navigation_route_settings">Settings</string>
+  <!--Statistics-->
+  <string name="total_session_count">Total Session </string>
+  <string name="daily_session_count">Daily Average</string>
 </resources>
