Updated the app icon and added splash screen Added an app icon Added themes and colors for the splash screen for version targets.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
   <string name="timer_start_focus">Start Focus</string>
   <string name="timer_start_break">Start Break</string>
   <string name="stop_session">Stop Session</string>
+  <string name="notification_action_dismiss">Dismiss</string>
 </resources>
