Setup for Room database to store session date. And Added isSave Session allowed in the settings Entities for storing the session data is created along with type convertors the Dao objects will be updated latter. SessionData is the domain level model to read and write to. SessionDurationOption.kt is renamed to DurationOption. SettingsScreen displays a switch which determine if the save session is allowed or not. The data is saved in the datastore. SessionsRepository methods will be added later ,as  per the requirements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
   <string name="timer_start_break">Start Break</string>
   <string name="stop_session">Stop Session</string>
   <string name="notification_action_dismiss">Dismiss</string>
+
+  <string name="database_name">Time Management App Database</string>
+  <string name="allow_save_session_data">Save Sessions</string>
 </resources>
