Work on the Statistics Screen The Statistics Screen has a tabview which provides session HighLightCard information according to the tab selected, the main structure don't change a bit only the data. Renamed field SESSION_OPTION to SESSION_DURATION in AppDataBase and added the schema's for the room. The Di modules are separated according to the scope that they provide AppModule for SingleTon, TimerServiceModule for service and RepositoryModule for view-model scoped. SessionDurationOption.kt is renamed to DurationOption. StatisticsRepository provides the methods to be read by the view-model this class be updated later. StatisticsTabRow provides tabs of all ,weekly and today's.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,18 @@
 
   <string name="database_name">Time Management App Database</string>
   <string name="allow_save_session_data">Save Sessions</string>
+
+  <!--  Session Highlights-->
+  <string name="total_focus_count">Focus Sessions</string>
+  <string name="total_break_count">Break Sessions</string>
+  <string name="average_focus_time">Avg. Focus Time</string>
+  <string name="average_break_time">Avg. Break Time</string>
+  <!--  Statistics Headers-->
+  <string name="highlights_text">Highlights</string>
+  <string name="highlights_graph">Graph</string>
+<!--  Statistics options-->
+  <string name="statistics_all">All</string>
+  <string name="minutes_short_hand">min</string>
+  <string name="statistics_weekly">Weekly</string>
+  <string name="statistics_today">Today</string>
 </resources>
