Finished all components for the StatisticsScreen. Prepared the StatisticsGraph which shows the weekly report of the statistics as a graphical manner. SessionInfoDao provides the Map of LocalDate and Int which are received as SessionReportModel and the graph is drawn. Some correction left in the graph. Removed SessionWithDetailsEntity.kt as there is no relations all the data is retrieved using joins. In TimerServiceRepository::addTimerSession sessionDate is required now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
   <string name="statistics_weekly">Weekly</string>
   <string name="statistics_today">Today</string>
   <string name="settings_option_cnt_desc">Settings Options</string>
+  <string name="statistics_loading">Preparing Graph</string>
 </resources>
