Corrected The Graph and removed unwanted filed from SessionInfoEntity. The Graph is again repaired seems a quite better to its previous version. Removed at field from SessionInfoEntity as it was useless. Added a fake database in case it might be needed later. Corrected error for weekly report didn't consider the empty list to get the minimum off.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
   <string name="statistics_today">Today</string>
   <string name="settings_option_cnt_desc">Settings Options</string>
   <string name="statistics_loading">Preparing Graph</string>
+
+  <string name="statistics_graph_subtext">Current week stats</string>
+  <string name="statistics_nodata">No Data Available</string>
 </resources>
